# Capstone

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.md  configure.ac
CVS/: Entries  Repository  Root
adaptive_grip/: .gitignore  CMakeLists.txt  Makefile  README.md  installation.txt
adaptive_grip/arduino/All_motor_test/: All_motor_test.ino
adaptive_grip/arduino/Individual_motor_test/: Individual_motor_test.ino  motorScripts.ino
adaptive_grip/arduino/Motor_with_feedback/: Additional_Functions.ino  Motor_Control.ino  Motor_with_feedback.ino  Pressure_feedback.ino
adaptive_grip/arduino/Motor_with_feedback/User_input_motor_control/: User_input_motor_control.ino
adaptive_grip/arduino/Separate_Direction_Control/: Additional_Functions.ino  Motor_Control.ino  Separate_Direction_Control.ino
adaptive_grip/arduino/force_sensor_test/: force_sensor_test.ino
adaptive_grip/arduino/motor_test/: motor_test.ino
adaptive_grip/arduino/test_stepper_motor/: test_stepper_motor.ino
adaptive_grip/gantry_qt/: CMakeLists.txt  calibrate.cpp  calibrationwindow.cpp  calibrationwindow.h  calibrationwindow.ui  chartview.cpp  chartview.h  engthread.cpp  engthread.h  gantrywindow.cpp  gantrywindow.h  gantrywindow.ui  itemdisplaywindow.cpp  itemdisplaywindow.h  livekinectwidget.cpp  livekinectwidget.h  liveupdatethread.cpp  liveupdatethread.h  liveviewer.cpp  liveviewer.h  main.cpp  mainwindow.h  pclviewer.cpp  pclviewer.h  pclviewer.ui  pclviewer2.cpp  pclviewer2.h  pclviewer2.ui  position.cpp
adaptive_grip/headers/: CCloud.h  Calibration.h  Camera.h  CameraBase.h  CameraFile.h  Clawduino.h  Cluster.h  ClusterFinder.h  Engine.h  Engine2.h  Engine3.h  Logger.h  Mutex.h  PCLUtils.h  PlaneFilter.h  QLogger.h  RobotExt.h  Shell.h  SurfaceMap.h  TwoPlaneFilter.h  WSObject.h  colours.h  common_defs.h  stringmanip.h
adaptive_grip/headers/inst/: pcl_visualizer.h  plane_clipper_3D.h
adaptive_grip/programs/: basic_shell.cpp  gantry_test.cpp  interface_update.cpp  test_engine.cpp  test_homing.cpp  test_shell.cpp  test_two_plane_filter.cpp  test_two_plane_filter_practice.cpp  test_vector_three.cpp  test_vector_two.cpp
adaptive_grip/qt/RobotGUI/: ItemsImage.cpp  ItemsImage.h  ObservedLine.cpp  ObservedLine.h  RobotGUI.cpp  RobotGUI.h  RobotGUI.pro  RobotLimits.cpp  RobotLimits.h  main.cpp
adaptive_grip/qt/tmp/: itemdisplaywindow.cpp  itemdisplaywindow.h
adaptive_grip/scripts/: start_xbox_controller
adaptive_grip/src/: CMakeLists.txt  Calibration.cpp  Camera.cpp  CameraFile.cpp  Clawduino.cpp  ClipperInstantiations.cpp  ClusterFinder.cpp  Engine.cpp  Engine2.cpp  Logger.cpp  PCLUtils.cpp  PlaneFilter.cpp  QLogger.cpp  RobotExt.cpp  Shell.cpp  SurfaceMap.cpp  TwoPlaneFilter.cpp  WSObject.cpp  pcl_visualizer_instantiations.cpp  plane_clipper_3D.cpp  stringmanip.cpp
adaptive_grip/vision/: .gitignore  README.txt
adaptive_grip/vision/pcl_example/: .gitignore  CMakeLists.txt  openni_viewer_simple.cpp
adaptive_grip/vision/pcl_manipulation_shell/: CMakeLists.txt  pcl_manipulation_shell.cpp
adaptive_grip/vision/pcl_read/: CMakeLists.txt  pcl_read.cpp
adaptive_grip/vision/pcl_segmentation/: CMakeLists.txt  extract_indices.cpp
adaptive_grip/vision/pcl_testing/: .gitignore  CMakeLists.txt  test_pcl_grab.cpp
examples/: .Makefile.swp  .controller.cpp.swp  Makefile  Makefile.am  Makefile.in  controller.cpp  robot_home.cpp  robot_move_to.cpp  robot_shell.cpp
examples/CVS/: Entries  Repository
headers/: Clawduino.h
src/: Makefile  Makefile.am  Makefile.in  Robot.cpp  RobotController.cpp  RobotController.h  RobotLimits.cpp  RobotLimits.h  RobotPosition.cpp  log.txt
src/CVS/: Entries  Repository
src/adaptive_grip/: Clawduino.cpp
src/gantry/: Makefile  robot_shell.cpp
src/gantry/examples/: limits.cpp  robot_home.cpp  test.cpp
src/gantry/include/: CRScomm.h  Robot.h  RobotController.h  RobotLimits.h  RobotPosition.h
src/gantry/src/: CRScomm.cpp  Robot.cpp
src/kinect/include/: kinect_to_gantry.h
src/kinect/src/: kinect_to_gantry.cpp  main.cpp
src/overhead_vision/src/: main.cpp
