nobase_include_HEADERS	= Robot.h RobotLimits.h RobotPosition.h RobotController.h CRScomm.h
lib_LIBRARIES		= libRobot.a

CPPFLAGS = -Wall -O2

libRobot_a_SOURCES = \
	CRScomm.h CRScomm.cpp \
	RobotController.h RobotController.cpp \
	RobotPosition.h RobotPosition.cpp \
	RobotLimits.h RobotLimits.cpp \
	Robot.h Robot.cpp
